# stm32-uart-driver-plus

./: CHANGELOG.md  CMSIS_FREERTOS_GUIDE.md  CMSIS_FREERTOS_LL_GUIDE.md  CMakeLists.txt  CONFIGURATION_GUIDE.md  LICENSE  README.md  usage.md
.claude/: settings.local.json
build-host/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-host/Testing/Temporary/: CTestCostData.txt
build-host/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_uart_deterministic_queue  test_uart_driver_determinism
examples/: freertos_ll_example.c
examples/freertos_example/: .mxproject  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  freertos_example.ioc  main.c  main_wCommand.c  main_wDriver.c  main_wLoggingCommand.c  main_w_Command.c  main_wo_Command.c
examples/freertos_example/CSharp_GUI_Example/: MainForm.cs  README.md  STM32Controller.cs
examples/freertos_example/Core/Inc/: stm32f4xx_it.h
examples/freertos_example/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
examples/freertos_example/Drivers/LoggerPlus/include/: command_module.h  commands.h  logging.h  uart_driver.h  uart_driver_config.h  uart_protocol.h
examples/freertos_example/Drivers/LoggerPlus/src/: command_module.c  commands.c  fault_module.c  logging.c  uart_driver.c  uart_protocol.c
examples/freertos_example/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
examples/standalone/: main_wo_Command.c
include/: cmsis_uart_adapter.h  command_module.h  commands.h  fault_module.h  logging.h  logging_config.h  sample_commands.h  uart_deterministic_queue.h  uart_driver.h  uart_driver_abstraction.h  uart_driver_config.h  uart_driver_version.h  uart_rtos_adapter.h
src/: command_module.c  commands.c  fault_module.c  logging.c  sample_commands.c  uart_deterministic_queue.c  uart_driver.c  uart_driver_abstraction.c  uart_rtos_adapter.c
tests/: CMakeLists.txt  test_uart_deterministic_queue.c  test_uart_driver_determinism.c
tests/framework/: unity.c  unity.h
tests/mocks/: Mockstm32f4xx_hal.c  Mockstm32f4xx_hal.h  cmsis_os2.h
